@@ -7,6 +7,8 @@ zeit.content.dynamicfolder changes
 
 - Remove unnecessary interfaces from ``IVirtualContent``
 
+- Provide ``__parent__`` in template. (ZON-3254)
+
 
 1.1.4 (2016-07-26)
 ------------------
